--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         
             <h4 class="fst-italic">聯絡方式</h4>
             <ul class="list-unstyled">
-              <li>Email：your@email.com</li>
-              <li>GitHub：<a href="#">github.com/yourname</a></li>
-              <li>IG：@your_ig</li>
+              <li>Email：a201034722@gmail.com</li>
+              <li>GitHub：<a href="#">github.com/Shuoting93</a></li>
+              <li>IG：shuo931203</li>
             </ul>
           </div>
         
